# course-work-ml-evaluation

./: .gitignore  CMakeLists.txt  LICENCE  LICENSE  README.md
model/src/: model_training.ipynb  model_training.py  predict_service.py
ui/: CMakeLists.txt
ui/include/: python_bridge.h
ui/include/app/: main_window.h  python_bridge.h
ui/include/dto/: feature_limits.h  model_info.h  prediction_result.h
ui/include/utils/: env_loader.h
ui/src/: main.cpp  python_bridge.cpp
ui/src/app/: main_window.cpp  python_bridge.cpp
